Fixing form width on mobile

--- a/assets/styles/wufoo.css
+++ b/assets/styles/wufoo.css
@@ -25,6 +25,11 @@ form#form2 li.complex div span.left, form#form2 li.complex div span.right {
     form#form2 li.complex div span.left, form#form2 li.complex div span.right, form#form2 li#fo2li10 span {
         width: 100% !important;
     }
+    form#form2 input.text, input.search, textarea.textarea, select.select {
+      width: 95%;
+      max-width: 95%;
+      min-width: 95%;
+    }
 }
 
 /* Typography */
